# medilife-agent-swarm

./: .gitignore  CAPABILITY_EVIDENCE.md  CHANGELOG.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  api_server.py  config.example.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  training-ci.yml
agents/: consultation_agent.py  skill_registry_mixin.py
core/: agent_loop.py  llm_client.py  skill_loader.py  skill_registry.py
evaluation/: README.md  capability_parity.py  deepseek_e2e.py  dual_project_report.py  evidence_memory_benchmark.py  export_resume_metrics.py  generate_placeholder.py  innovation_benchmark.py  legacy_capability_parity.v1.json  result_contract.py
evaluation/datasets/: medilife_e2e_v1.json  medilife_longitudinal_v1.jsonl
examples/: test_all.py
knowledge/: __init__.py  evidence_vector_index.py  milvus_kb.py  resources.py
medilife_skills/: __init__.py
memory/: __init__.py  entropy_manager.py  evidence_memory.py  long_term.py
research/: deep_research_workflow.py  evidence_synthesizer.py  trace_graph.py
swarm/: events.py  shared_context.py  swarm_coordinator.py
tests/: test_brand_and_config.py  test_capability_parity.py  test_deepseek_e2e.py  test_evaluation_contract.py  test_evidence_memory.py  test_observability_stream.py  test_skills_and_resources.py
training/: LICENSE  MODIFICATIONS.md  README.md  run_train.sh
training/evaluation/: README.md
training/examples/: medilife-r1_2b_dapo.sh  medilife-r1_8b_gspo.sh
training/scripts/: validate_distribution.py
validation/: auto_fixer.py
(+29 files in other folders)
