[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "medilife-agent-swarm"
version = "0.2.0"
description = "A governed multi-agent medical information retrieval and risk guidance system"
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{name = "MediLife Team"}]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "loguru>=0.7,<1",
  "openai>=1.33,<2",
  "pydantic>=2.10,<3",
  "pyyaml>=6,<7",
]

[project.optional-dependencies]
memory = ["mem0ai==0.1.0", "qdrant-client>=1.12,<2", "redis>=5.2,<6"]
rag = ["pymilvus>=2.5,<3", "sentence-transformers>=3,<6"]
research = ["beautifulsoup4>=4.12,<5", "duckduckgo-search>=6.3,<7"]
server = ["uvicorn[standard]>=0.30,<1"]
test = ["build>=1.2,<2", "pytest>=8,<9", "ruff>=0.5"]
release = ["pip-audit>=2.7", "cyclonedx-bom>=5", "twine>=5"]
all = [
  "mem0ai==0.1.0", "qdrant-client>=1.12,<2", "redis>=5.2,<6",
  "pymilvus>=2.5,<3", "sentence-transformers>=3,<6",
  "beautifulsoup4>=4.12,<5", "duckduckgo-search>=6.3,<7",
  "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
medilife = "main:main"

[tool.setuptools]
py-modules = ["api_server", "main"]

[tool.setuptools.packages.find]
include = ["agents*", "constraints*", "core*", "knowledge*", "memory*", "research*", "swarm*", "validation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 180

[tool.ruff.lint]
select = ["E9"]
